# spud

./: AUTHORS  COPYING  Jenkinsfile  Makefile  Makefile.in  SConstruct  configure  configure.in  libspud.py
.github/workflows/: ubuntu.yml
debian/: changelog  control  diamond.copyright  files  libspud-dev.copyright  libspud-dev.docs  libspud-dev.install  python3-dxdiff.install  python3-spud.install  rules  spud-diamond.install  spudtools.install
debian/python-diamond/DEBIAN/: md5sums  postinst  prerm
diamond/: COPYING  config.py  dialogs.py  diamond  mac_bundle.sh  preprocess.py  schema.py  setup.py  setup.py.in
diamond/MacOS_Resources/: Info.plist  diamond
diamond/debian/: changelog  control  files  python-diamond.postinst.debhelper  python-diamond.prerm.debhelper  python-diamond.substvars  rules
diamond/debian/python-diamond/DEBIAN/: control
diamond/debian/python-diamond/usr/share/diamond/gui/: gui.glade
diamond/debian/python-diamond/usr/share/diamond/schema/: fluidity_options.rng
diamond/diamond/: TextBufferMarkup.py  attributewidget.py  choice.py  commentwidget.py  config.py  databuttonswidget.py  datawidget.py  debug.py  descriptionwidget.py  dialogs.py  diffview.py  interface.py  mixedtree.py  plugins.py  plugins.py.in  preprocess.py  preprocess.py.in  pygtkconsole.py  schema.py  schemausage.py  schemauseage.py  sliceview.py  todo_elements.txt  tree.py  triangle_reader.py  useage.py  useview.py
diamond/gui/: gui.glade  gui.ui
diamond/macosx/: mac_bundle.sh
diamond/misc/: diamond-bash-completion
diamond/plugins/: test.py
diamond/plugins/flml/: show_triangle_mesh.py
doc/: Makefile  diamond_manual.tex  spud_manual.tex
dxdiff/: setup.py
dxdiff/dxdiff/: dxdiff  editscript.py  fmes.py
examples/: ballistics.rnc  ballistics.rng
include/: cspud.h  spud.h  spud_config.h  spud_enums.h  spud_interfaces.h
python/: libspud.c  libspud.py  libspud.py.in  setup.py  test.flml  test_ctypes.py  test_libspud.py
schema/: spud_base.rnc  spud_base.rng
src/: fspud.F90  fspud.f90  fspud_interfaces.cpp  spud.cpp  spud_interfaces.cpp  tinyxmlparser.cpp
src/tests/: Makefile.in  junit_test.py  test_fspud.F90  test_fspud.f90  test_main.cpp  unittest_tools.f90
xmldiff/: COPYING
xmldiff/xmldiff/: __main__.py  bimap.py  editscript.py  fmes.py  lcs.py  utils.py  xmldiff.py
